Fix slight wrong position on minimap icons. Transition away from passing string to VDF converter. Use string arrays instead. Add placeholder icon to heroes that haven't been picked yet on live league game. Add nuget references to SteamWebAPI2 and SourceSchemaParser.

--- a/DotaDb/Content/Site.css
+++ b/DotaDb/Content/Site.css
@@ -139,6 +139,11 @@ textarea {
     width: 32px;
     height: 32px;
     position: absolute;
+    -moz-transform: translate(-50%, 50%);
+    -ms-transform: translate(-50%, 50%);
+    -o-transform: translate(-50%, 50%);
+    -webkit-transform: translate(-50%, 50%);
+    transform: translate(-50%, 50%);
 }
 
 .full-screen-bg-tint {
